WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
257122
[WGSL] Don't compute size and alignment for structs that shouldn't be packed
https://bugs.webkit.org/show_bug.cgi?id=257122
Summary
[WGSL] Don't compute size and alignment for structs that shouldn't be packed
Tadeu Zagallo
Reported
2023-05-22 07:59:49 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-05-22 08:00:05 PDT
<
rdar://problem/109658987
>
Tadeu Zagallo
Comment 2
2023-05-22 08:10:07 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/14179
EWS
Comment 3
2023-05-22 23:17:47 PDT
Committed
264406@main
(20a06e254bc9): <
https://commits.webkit.org/264406@main
> Reviewed commits have been landed. Closing PR #14179 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug