[WGSL] Don't compute size and alignment for structs that shouldn't be packed https://bugs.webkit.org/show_bug.cgi?id=257122 rdar://109658987

Reviewed by Dan Glastonbury.

Structs that shouldn't be packed might contain types for which we don't compute
size and alignment, so we shouldn't try to compute it.

* Source/WebGPU/WGSL/Metal/MetalFunctionWriter.cpp:
(WGSL::Metal::FunctionDefinitionWriter::visit):

Canonical link: https://commits.webkit.org/264406@main